<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_string">Вопрос</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean. </string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas. </string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake. </string>
    <string name="result_string">Количество правильных ответов = 0</string>
    <string name="dialog_button">OK</string>
    <string name="warning_text">Вы уверены, что хотите использовать подсказку?</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="cheat_button">Подсказка</string>
    <string name="judgment_toast">Обманывать нехорошо!</string>
    <string name="cheat_end">Подсказки закончились!</string>
    <string name="cheats_left">"Подсказок осталось: "</string>
    <string name="API">"Версия API: %d"</string>
</resources>